2005-09- 0.2-1 Samuel Abels <spam debain org>
	* Made the "Weight" spin button entry box allow float numbers.
	* Fix: Improved the installer and the build no longer fails.
	* Fix: Substitute german language strings for English.
	* Correctly register application/x-shrinkingman MIME-type.
	* Automatically load the last opened file on startup.
	* Changed column order.
	* Made the "Quantity" spin button entry box allow float numbers.
	* Added a .desktop file.
	* Implemented cut & paste operations and added "Edit" menu.
	* Added navigation toolbuttons for the calendar.
	* Fix: 1-month-offset
	* Fix: Incorrect CLI error message when adding new food.
	* Fix: Remember weight even if no food was consumed that day.
2005-09-11 0.1-1 Samuel Abels <spam debain org>
	* Initial Release